fix light/dark mode background

--- a/src/components/ui/mobileMenu/styles.module.css
+++ b/src/components/ui/mobileMenu/styles.module.css
@@ -4,9 +4,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #000000;
+  background-color: var(--background-dark);
   z-index: 10;
-  padding-block: 2rem;
+  padding-block: 4rem;
   ul {
     margin: 0;
     padding: 0;
@@ -14,6 +14,9 @@
   }
   @media screen and (min-width: 910px) {
     display: none;
+  }
+  @media (prefers-color-scheme: light) {
+    background-color: var(--background-light);
   }
 }
 
@@ -33,12 +36,7 @@
   }
   a:hover {
     color: #007bff;
-    background-color: #3c4146;
-    border-radius: 5px;
-    transition: background-color 0.25s;
-    @media (prefers-color-scheme: light) {
-      background-color: #f8f9fa;
-    }
+    transition: color 0.25s;
   }
 }
 
@@ -50,7 +48,7 @@
   top: 10px;
   right: 10px;
   color: #fff;
-  background-color: #333;
+  background-color: var(--background-dark);
   z-index: 20;
   svg {
     width: 30px;
@@ -58,5 +56,9 @@
   }
   @media screen and (min-width: 910px) {
     display: none;
+  }
+  @media (prefers-color-scheme: light) {
+    background-color: var(--background-light);
+    color: #212529;
   }
 }
