--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --background-light: #f8f9fa;
+  --background-dark: #212529;
 }
 
 body {
